--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dev.finance$</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +17,7 @@
         <h1 id="logo">dev.finance$</h1>
     </header>
 
-    <main>
+    <main class="container">
         <section id="balance">
             <h2>Balanço</h2>
             <div class="card">
@@ -25,7 +28,7 @@
                 <h3>Saídas</h3>
                 <p>R$ 2.000,00</p>
             </div>
-            <div class="card">
+            <div class="card total">
                 <h3>Total</h3>
                 <p>R$ 3.000,00</p>          
             </div>
@@ -42,19 +45,19 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Luz</td>
-                        <td>R$ -500,00</td>
-                        <td>23/01/2021</td>
+                        <td class="description">Luz</td>
+                        <td class="expense">R$ -500,00</td>
+                        <td class="date">23/01/2021</td>
                     </tr>
                     <tr>
-                        <td>Criação de website</td>
-                        <td>R$ 5000,00</td>
-                        <td>24/01/2021</td>
+                        <td class="description">Criação de website</td>
+                        <td class="income">R$ 5000,00</td>
+                        <td class="date">24/01/2021</td>
                     </tr>
                     <tr>
-                        <td>Internet</td>
-                        <td>R$ -200,00</td>
-                        <td>25/01/2021</td>
+                        <td class="description">Internet</td>
+                        <td class="expense">R$ -200,00</td>
+                        <td class="date">25/01/2021</td>
                     </tr>
                 </tbody>
             </table>
