--- a/index.html
+++ b/index.html
@@ -78,9 +78,40 @@
         </section>
     </main>
 
+    <div class="modal-overlay active">
+        <div class="modal">
+            <div class="form">
+                <h2>Nova Transação</h2>
+                <form action="" method="post">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" name="description" id="description" placeholder="Descrição">
+                    </div>
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input type="number" step="0.01" name="amount" id="amount" placeholder="0,00">
+                    </div>
+                    <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais.</small>
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Data</label>
+                        <input type="date" name="date" id="date" placeholder="00/00/0000">
+                    </div>
+                    <div class="input-group actions">
+                        <a href="" class="btutton cancel">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>dev.finace$</p>
     </footer>
+
+    <script>
+        
+    </script>
 </body>
 
 </html>
